<resources>
    <string name="app_name">PopularMoviesStage_Two</string>
    <string-array name="range_by">
        <item>Popularity</item>
        <item>Top Rated</item>
        <item>Favourites</item>
    </string-array>
    <string name="movie_added">Added to favorite movie list.</string>
    <string name="movie_deleted">Removed from favorite movie list.</string>
    <string name="sort_by">Sort by</string>
    <string name="release_date">Release date</string>
    <string name="rating">Rating</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="poster_detailed">poster_detailed</string>
    <string name="reviews">REVIEWS</string>
    <string name="trailers">TRAILERS</string>
</resources>
